--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "bmqmingqi/aliyun-pay",
-    "description": "\\",
+    "description": "支付宝支付sdk直接配置即可用 ",
     "authors": [
         {
             "name": "bmqmingqi",
